--- a/CSS/utility.css
+++ b/CSS/utility.css
@@ -42,7 +42,11 @@ i[icon] {
 }
 
 ::-webkit-scrollbar-corner {
-    background: rgba(0, 0, 0, .05);
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-corner {
+    background-color: rgba(0, 0, 0, .05) !important;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -58,7 +62,11 @@ i[icon] {
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, .05);
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, .05) !important;
 }
 
 ::selection {
